<resources>
    <string name="app_name">BluetoothInterface</string>
    <string name="discovery_devices">Discover Devices</string>
    <string name="toggle_bluetooth">Toggle Bluetooth</string>
    <string name="start_receiving">Start Receiving</string>
    <string name="Select_and_start">Start</string>
    <string name="enable_bt">Enable BT</string>
    <string name="stop_reading">Stop Reading</string>
    <string name="start_reading">Start Reading</string>
    <string name="connect">Connect</string>
    <string name="connected_status">Connected</string>
    <string name="reading_status">Reading</string>
    <string name="quality">Sensor Data Quality</string>
    <string name="frames_lost_title">Frames Lost: \t</string>
    <string name="frames_lost_left">0</string>
    <string name="frames_lost_right">0</string>
    <string name="frames_lost_percent_title">Percentage: \t </string>
    <string name="frames_lost_percent_left">0.0</string>
    <string name="frames_lost_percent_right">0.0</string>

</resources>
